--- a/Projeto_SO2/Projeto_SO2.vcxproj
+++ b/Projeto_SO2/Projeto_SO2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{91d150c1-af10-4e59-843f-cde73407d5d8}</ProjectGuid>
     <RootNamespace>ProjetoSO2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Controlador</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
