--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClInclude Include="client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="passageiro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
